<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Makan Malam"
        android:textAlignment="center"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/makan_malam_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/makan_malam_second"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="Menu"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/menu_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/menu_second"
        android:textAlignment="center"
        android:textSize="25dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:text="Porsi"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/porsi_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:text="@string/porsi_second"
        android:textAlignment="center"
        android:textSize="25dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:text="Harga"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/harga_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:text="@string/harga_second"
        android:textAlignment="center"
        android:textSize="25dp"/>

</RelativeLayout>